<resources>
    <string name="app_name">Facial Attendance</string>
    <string name="welcome">Welcome to</string>
    <string name="slogan">Your record is our job</string>
    <string name="letgo">Let\'s go</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="wannabepart">Wanna Be Our Customer</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="setup">Set up</string>
    <string name="bestEmployee">Best Employee</string>
    <string name="lateEmployee">Late Employee</string>
    <string name="title">Title</string>
    <string name="latetime">Late Time</string>
    <string name="starttime">Starting Time</string>
    <string name="date">Date</string>
    <string name="scan">Scan Face</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register_or_login">RegisterOrLoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="capture_button">Capture</string>
    <string name="total">Total Attendees</string>
    <string name="happened">Happend on</string>
    <string name="meeting">Meeting</string>
    <string name="attendee">Attendee</string>
    <string name="employ_date">Employ Date</string>
    <string name="birth_of_date">Birth of Date</string>
    <string name="SAVE">Save</string>
    <string name="cancel">Cancel</string>
    <string name="employee">Employees</string>
    <string name="name">Name</string>
</resources>
