<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />


    <!--<item
        android:id="@+id/mnu_setup"
        android:icon="@drawable/ic_clock"
        android:title="@string/setup"
        />
-->
    <item
        android:id="@+id/mnu_employee"
        android:icon="@drawable/ic_profile"
        android:title="@string/employee"/>

    <!--<item
            android:id="@+id/mnu_attendee"
            android:icon="@drawable/ic_profile"
            android:title="@string/attendee"/>-->

    <item
        android:id="@+id/mnu_camera"
        android:icon="@drawable/ic_profile"
        android:title="@string/camera"/>
</menu>