<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".Activity.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="32dp"
            android:layout_marginTop="64dp"
            android:id="@+id/username"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/text"
            android:text="@string/app_name"/>



    <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="64dp"
            android:layout_height="48sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textAlignment="center"
            android:hint="@string/username"
            android:fontFamily="sans-serif-condensed-light"
            android:elevation="10dp"
            android:padding="5dp"
            android:background="@drawable/border_edit_text" />
    <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_height="48sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="5dip"
            android:textAlignment="center"
            android:hint="@string/email"
            android:fontFamily="sans-serif-condensed-light"
            android:background="@drawable/border_edit_text" />
    <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="5dip"
            android:textAlignment="center"
            android:hint="@string/password"
            android:fontFamily="sans-serif-condensed-light"
            android:background="@drawable/border_edit_text" />
    <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="5dip"
            android:textAlignment="center"
            android:hint="@string/confirm_password"
            android:fontFamily="sans-serif-condensed-light"
            android:background="@drawable/border_edit_text" />

    <Button
            android:id="@+id/registerButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:elevation="10dp"
            android:hint="@string/register"
            android:fontFamily="sans-serif-condensed-light"
            android:textColorHint="@android:color/white"
            android:background="@drawable/button"/>

</LinearLayout>