<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".WelcomeNewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.5">

        <ImageView
            android:id="@+id/newbie"
            android:scaleType="fitStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/welcome_newbie" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_alignParentStart="true"
            android:paddingStart="8dp"
            android:textSize="32dp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:id="@+id/welcome"
            android:text="@string/welcome"/>

        <TextView
            android:id="@+id/nameapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcome"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nameapp"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:id="@+id/go"
            android:layout_height="64dp"
            android:background="@color/button"
            android:text="@string/letgo"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>