<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context=".Activity.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="32dp"
                android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="5dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey_80" />

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dip"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey_80" />

        <Button
                android:id="@+id/loginButton"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/soft_button"
                android:elevation="20dp"
                android:hint="@string/login"
                android:textColorHint="@android:color/white" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/blurBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:visibility="invisible" />

    <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:visibility="visible" />
</FrameLayout>