<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.ProfileActivity"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/image_profile"
            app:placeholderImage="@drawable/profile"
            app:roundAsCircle="true"/>
<!--        <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="256dp"-->
<!--                android:id="@+id/image_profile"-->

<!--        />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="128dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/username"/>
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="24dp"-->
<!--                android:fontFamily="sans-serif-condensed-light"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:text="@string/email"/>-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:text="@string/birth_of_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/department"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/position"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/employ_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/username"/>
<!--            <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/email_textview"-->
<!--                    android:textSize="24dp"-->
<!--                    android:fontFamily="sans-serif-condensed-light"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:text=""/>-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/birth_of_date_textview"
                    android:textSize="24dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:text=""/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/department"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/department"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/position"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@android:color/white"
                android:text="@string/department"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/employ_date_textview"
                    android:textSize="24dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:text="@string/department"/>



        </LinearLayout>



    </LinearLayout>




</LinearLayout>