<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SetupFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="124dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/starttime"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/latetime"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:maxLines="1"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"

                    android:hint="@string/title"
                    android:background="@null"
                    android:textColorHint="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startDate"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startingtime"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/starttime"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/latetime"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="@string/latetime"/>


            </LinearLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

        </LinearLayout>








    </LinearLayout>


</LinearLayout>